# status-network-monorepo

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  2  GASLESS_BLOCK_BUILDING_BUG.md  Makefile  README.md  RLN-CONFIG-OPTIONS.md  build-rln-enabled-sequencer.sh  makefile-contracts.mk  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: all-tools.yml  bridge-ui-e2e-tests.yml  bridge-ui-publish.yml  build-and-publish.yml  codeql.yml  coordinator-build-and-publish.yml  coordinator-testing.yml  get-has-changes-requiring-e2e-testing.yml  lido-governance-monitor-build-and-publish.yml  linea-besu-package-build-and-upload.yml  linea-besu-package-release.yml  linea-sequencer-plugin-release.yml  linea-sequencer-plugin-testing.yml  linea-tracer-plugin-release.yml  main.yml  native-yield-automation-service-build-and-publish.yml  native-yield-automation-service-testing.yml  postman-build-and-publish.yml  postman-testing.yml  prover-build-and-publish.yml  prover-native-lib-blob-compressor-release.yml  prover-testing.yml  release-docker.yml  reusable-tracer-blockchain-tests.yml  reusable-tracer-nightly-tests.yml  reusable-tracer-unit-tests.yml  reusable-tracer-weekly-prc-tests.yml  reusable-tracer-weekly-tests.yml  reuse-check-images-tags-and-push.yml  reuse-linea-besu-package-build-test-push.yml  reuse-linea-besu-package-run-e2e-tests.yml  reuse-linea-besu-package-run-test.yml  reuse-run-e2e-tests.yml  rln-prover-tests.yml  run-smc-tests.yml  run-validium-e2e-tests.yml  sequencer-tests.yml  staterecovery-testing.yml  status-network-ci.yml  testing.yml  (+6 more)
besu-plugins/linea-sequencer/sequencer/src/main/rust/rln_bridge/: Cargo.toml  Dockerfile.arm64  Dockerfile.debug  Dockerfile.rln-build  build-arm64.sh
besu-plugins/linea-sequencer/sequencer/src/main/rust/rln_bridge/resources/: rln_final.arkzkey
besu-plugins/linea-sequencer/sequencer/src/main/rust/rln_bridge/src/: lib.rs
config/coordinator/: coordinator-config-v2.toml
contracts/: makefile-contracts.mk
contracts/local-deployments-artifacts/: deployBridgedTokenAndTokenBridgeV1_1.ts  deployL2MessageServiceV1.ts  deployPlonkVerifierAndLineaRollupV6.ts  deployStatusNetworkContracts.ts
docker/: RLN-CONFIGURATION-GUIDE.md  compose-spec-l2-services-rln.yml  compose-spec-l2-services.yml  compose-tracing-v2-rln.yml
docker/config/: linea-local-dev-genesis-PoA-besu.json
docker/status-network-besu/: Dockerfile
docs/: PRODUCTION-CONFIG-CHECKLIST.md  private-gasless-transactions-prd.md  protocol-engineering.md
e2e/: jest-results.json  jest.rln-slashing.config.ts  jest.rln.config.ts  package.json  rln-gasless-report.json  rln-gasless-report.md
gradle/: libs.versions.toml
k8s/: CONTRACTS.md  README.md
pgrx_merkle_tree/: Cargo.toml  Readme.md
pgrx_merkle_tree/zerokit_ref/: Cargo.toml
rln-aggregator/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.slasher  Readme.md  Testing.md  build.rs
rln-aggregator/aggregator/: Cargo.toml  build.rs
rln-aggregator/aggregator/src/: main.rs  proof_delivery_service.rs  proof_delivery_service_tests.rs  proof_reduce_service.rs
rln-aggregator/proto/net/vac/aggregator/: aggregator.proto
rln-aggregator/slasher/: Cargo.toml
rln-aggregator/slasher/src/: common.rs  main.rs  proof_process.rs  slashing.rs  smart_contract.rs
rln-aggregator/src/: main.rs  proof_delivery_service.rs  proof_delivery_service_tests.rs
rln-prover/: Cargo.toml  Dockerfile  Readme.md
rln-prover/migrate_spam_limit/: Cargo.toml  Dockerfile
rln-prover/migrate_spam_limit/src/: main.rs
rln-prover/mock/: mock_user_2.json
rln-prover/proto/net/vac/prover/: prover.proto
rln-prover/prover/: Cargo.toml
rln-prover/prover/benches/: bench_common.rs  prover_bench.rs  prover_many_subscribers.rs
rln-prover/prover/src/: args.rs  epoch_service.rs  epoch_service_2.rs  epoch_service_tests.rs  error.rs  grpc_e2e.rs  grpc_service.rs  karma_sc_listener.rs  kill_switch.rs  lib.rs  mock.rs  nonce_manager.rs  nonce_manager_tests.rs  proof_generation.rs  proof_service.rs  proof_service_tests.rs  tests_common.rs  tier.rs  tiers_listener.rs  user_db.rs  user_db_2.rs  user_db_2_entities.rs  user_db_2_tests.rs  user_db_error.rs  user_db_service.rs  user_db_types.rs
rln-prover/prover/tests/: e2e.rs  grpc_e2e.rs
rln-prover/prover_cli/: Cargo.toml
rln-prover/prover_cli/src/: main.rs
rln-prover/prover_db_entity/: Cargo.toml
rln-prover/prover_db_entity/src/: deny_list.rs  lib.rs  m_tree.rs  m_tree_config.rs  nullifiers.rs  prelude.rs  tier_limits.rs  tx_counter.rs  user.rs
rln-prover/prover_db_migration/: Cargo.toml
rln-prover/prover_db_migration/src/: lib.rs  m20251115_init.rs  m20251128_deny_list.rs  m20251128_nullifiers.rs  main.rs
rln-prover/prover_db_migration_sqlx/: Cargo.toml
rln-prover/prover_db_migration_sqlx/src/: lib.rs
rln-prover/prover_merkle_tree/: Cargo.toml
rln-prover/prover_merkle_tree/src/: lib.rs  mem_db.rs  persist_db.rs
rln-prover/prover_pmtree/: Cargo.toml
rln-prover/prover_pmtree/src/: database.rs  lib.rs  persistent_db.rs  tree.rs
rln-prover/prover_pmtree_db_impl/: Cargo.toml
rln-prover/prover_pmtree_db_impl/src/: mem_db.rs
rln-prover/rln_proof/: Cargo.toml
rln-prover/rln_proof/benches/: generate_proof.rs
rln-prover/rln_proof/src/: lib.rs  proof.rs
rln-prover/smart_contract/: Cargo.toml
rln-prover/smart_contract/src/: common.rs  karma_sc.rs  karma_tiers.rs  lib.rs  mock.rs  rln_sc.rs
rln-prover/smart_contract/src/bin_tests/: rln_sc_test.rs
scripts/: build-custom-postgres.sh  build-rln-aggregator.sh  build-rln-circuit.sh  build-rln-enabled-sequencer-patched.sh  build-rln-enabled-sequencer-patched.sh.deprecated  build-rln-enabled-sequencer.sh  build-rln-prover.sh  build-rln-slasher.sh  fix-e2e-test-setup.sh  grant-operator-role.js  initialize-karma-tiers.ts  migrate-spam-limit.sh  setup-prover-account.js  start-rln-production.sh  verify-network-ready.sh
sn-api/: schema.sql
status-network-contracts/: .gas-report  .gas-snapshot  .gitignore  CHANGELOG.md  CLAUDE.md  PROPERTIES.md  README.md  SECURITY.md  foundry.toml  package.json  remappings.txt
(+296 files in other folders)
