[workspace]
members = [
    "rln_proof",
    "smart_contract",
    "prover",
    "prover_cli",
    "prover_client",
    "prover_db_migration_sqlx",
]
resolver = "2"

[workspace.dependencies]
rln = { version = "0.9.0", default-features = false, features = ["pmtree-ft"] }
zerokit_utils = { version = "0.7.0", default-features = false, features = ["pmtree-ft"] }
# rln = { git = "https://github.com/vacp2p/zerokit/", default-features = false, features = ["pmtree-ft"] }
# zerokit_utils = { git = "https://github.com/vacp2p/zerokit/", default-features = false, features = ["pmtree-ft"] }

ark-bn254 = { version = "0.5.0", default-features = false, features = ["std"] }
ark-relations = { version = "0.5.1", default-features = false, features = ["std"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["asm"] }
ark-groth16 = { version = "0.5.0", default-features = false, features = [] }
ark-serialize = { version = "0.5.0", default-features = false, features = [] }
# ark-serialize = { git = "https://github.com/arkworks-rs/algebra", features = ["std", "serde", "serde_with"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
url = { version = "2.5.8", features = ["serde"] }
alloy = { version = "1.7.3", features = [
    "getrandom",
    "sol-types",
    "contract",
    "provider-ws",
    "provider-anvil-node",
] }
async-trait = "0.1.89"
derive_more = "2.1.1"
thiserror = "2.0.18"
rustls = "0.23.33"
zeroize = "1.8.2"
tonic = "0.14.5"
tonic-web = "0.14.5"
tonic-reflection = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
# for build
tonic-prost-build = "0.14.5"
# for becnhmark
criterion = { version = "0.7.0", features = ["async_tokio"] }

[profile.release]
lto = "fat"
codegen-units = 1
# opt-level = 3
# debug = false
# panic = "unwind"
# strip = true
# incremental = false

