[package]
name = "slasher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
alloy.workspace = true

[dev-dependencies]
rln = { version = "0.9.0", default-features = false, features = ["pmtree-ft"] }
ark-bn254 = { version = "0.5.0", default-features = false, features = ["std"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["asm"] }
zerokit_utils = { version = "0.7.0", default-features = false, features = ["pmtree-ft"] }

[build-dependencies]
tonic-prost-build.workspace = true

[features]
anvil = ["alloy/provider-anvil-node"]
