[package]
name = "slasher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
alloy.workspace = true
rln = { version = "0.9.0", default-features = false, features = ["pmtree-ft"] }
ark-bn254 = { version = "0.5.0", default-features = false, features = ["std"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["asm"] }
ark-serialize = { version = "0.5.0", default-features = false, features = [] }
ark-groth16 = { version = "0.5.0", default-features = false, features = [] }
url = "2.5.8"
zeroize = "1.8.2"
derive_more = { version = "2.1.1", features = ["display"] }

[dev-dependencies]
zerokit_utils = { version = "0.7.0", default-features = false, features = ["pmtree-ft"] }

[build-dependencies]
tonic-prost-build.workspace = true

[features]
anvil = ["alloy/provider-anvil-node"]
