[package]
name = "slasher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
alloy.workspace = true
# rln = { version = "2.0.0", default-features = false, features = ["pmtree-ft"] }
rln = { git = "https://github.com/vacp2p/zerokit/", default-features = false, features = ["pmtree-ft"], rev = "4ef0d419914c113ec1a46e067a8dfa5ba1420a4b" }
ark-bn254 = { version = "0.5.0", default-features = false, features = ["std"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["asm"] }
ark-serialize = { version = "0.5.0", default-features = false, features = [] }
ark-groth16 = { version = "0.5.0", default-features = false, features = [] }
url = "2.5.8"
zeroize = "1.8.2"
derive_more = { version = "2.1.1", features = ["display"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_matches = "1.5.0"
# zerokit_utils = { version = "1.1.0", default-features = false, features = ["pmtree-ft"] }
zerokit_utils = { git = "https://github.com/vacp2p/zerokit/", default-features = false, features = ["pmtree-ft"], rev = "4ef0d419914c113ec1a46e067a8dfa5ba1420a4b" }

[build-dependencies]
tonic-prost-build.workspace = true

[features]
anvil = ["alloy/provider-anvil-node"]
