[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
rln_proof = { path = "../rln_proof" }
smart_contract = { path = "../smart_contract" }
rln.workspace = true
zerokit_utils.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
tokio.workspace = true
clap.workspace = true
url.workspace = true
alloy.workspace = true
async-trait.workspace = true
derive_more.workspace = true
thiserror.workspace = true
zeroize.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tonic-web.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde.workspace = true
tower-http = { version = "0.6.8", features = ["cors"] }
futures = "0.3.32"
bytesize = "2.3.1"
chrono = "0.4.44"
parking_lot = "0.12.5"
http = "1.4.0"
async-channel = "2.5.0"
num-bigint = "0.4.6"
serde_json = "1.0.149"
claims = "0.8.0"
clap_config = "0.1.1"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
rayon = "1.11.0"

# user db 2
sqlx.workspace = true
prover_db_migration_sqlx = { path = "../prover_db_migration_sqlx" }

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
criterion.workspace = true
ark-groth16.workspace = true
tempfile = "3.26"
tracing-test = "0.2"
lazy_static = "1.5"
function_name = "0.3"
serial_test = "3.4.0"

[[bench]]
name = "prover_bench"
harness = false

[[bench]]
name = "prover_many_subscribers"
harness = false

[features]
postgres = []

[lints.rust]
dead_code = "allow"
unused = "allow"
