[package]
name = "prover_db_migration"
version = "0.1.0"
edition = "2024"

[lib]
name = "prover_db_migration"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true

[dependencies.sea-orm-migration]
version = "2.0.0-rc.18" # sea-orm-migration version
features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-sqlite"
]