[package]
name = "prover_pmtree"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
# hex-literal = "0.3.4"
# tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
# sled = "=0.34.7"

[dependencies]
rayon = { version = "1.10.0", optional = true }
ark-serialize = { version = "0.5.0", default-features = false, optional = true }

[features]
default = []
parallel = ["rayon", "ark-serialize/parallel"]
