[package]
name = "rln_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Essential for JNI shared library

[dependencies]
jni = "0.21.1"
hex = "0.4"
rln = { version = "2.0.1", default-features = false, features = ["pmtree-ft"] }
# rln = { git = "https://github.com/vacp2p/zerokit/", default-features = false, features = ["pmtree-ft"], rev = "4ef0d419914c113ec1a46e067a8dfa5ba1420a4b" }

ark-bn254 = { version = "0.5.0", features = ["std"] }
ark-groth16 = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.5.1", features = ["std"] }
ark-serialize = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-ec = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-std = { version = "0.5.0", default-features = false, features = ["parallel"] }

[profile.release]
lto = true
opt-level = 'z' # Optimize for size
strip = true
